feat: add initial layout structure

--- a/package.json
+++ b/package.json
@@ -26,7 +26,12 @@
   "exports": {
     ".": "./src/index.ts",
     "./styles": "./src/styles.css",
-    "./overrides/ThemeSelect.astro": "./src/overrides/ThemeSelect.astro"
+    "./overrides/ThemeSelect.astro": "./src/overrides/ThemeSelect.astro",
+    "./overrides/PageFrame.astro": "./src/overrides/PageFrame.astro",
+    "./overrides/Header.astro": "./src/overrides/Header.astro",
+    "./overrides/SiteTitle.astro": "./src/overrides/SiteTitle.astro",
+    "./overrides/Sidebar.astro": "./src/overrides/Sidebar.astro",
+    "./overrides/TwoColumnContent.astro": "./src/overrides/TwoColumnContent.astro"
   },
   "files": [
     "src"
