feat: add MarkdownContent override

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "./overrides/Sidebar.astro": "./src/overrides/Sidebar.astro",
     "./overrides/TwoColumnContent.astro": "./src/overrides/TwoColumnContent.astro",
     "./overrides/ContentPanel.astro": "./src/overrides/ContentPanel.astro",
-    "./overrides/PageTitle.astro": "./src/overrides/PageTitle.astro"
+    "./overrides/PageTitle.astro": "./src/overrides/PageTitle.astro",
+    "./overrides/MarkdownContent.astro": "./src/overrides/MarkdownContent.astro"
   },
   "files": [
     "src"
