--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "./overrides/TwoColumnContent.astro": "./src/overrides/TwoColumnContent.astro",
     "./overrides/ContentPanel.astro": "./src/overrides/ContentPanel.astro",
     "./overrides/PageTitle.astro": "./src/overrides/PageTitle.astro",
-    "./overrides/MarkdownContent.astro": "./src/overrides/MarkdownContent.astro"
+    "./overrides/MarkdownContent.astro": "./src/overrides/MarkdownContent.astro",
+    "./overrides/Hero.astro": "./src/overrides/Hero.astro"
   },
   "files": [
     "src"
