--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "./overrides/PageTitle.astro": "./src/overrides/PageTitle.astro",
     "./overrides/MarkdownContent.astro": "./src/overrides/MarkdownContent.astro",
     "./overrides/Hero.astro": "./src/overrides/Hero.astro",
-    "./overrides/Footer.astro": "./src/overrides/Footer.astro"
+    "./overrides/Footer.astro": "./src/overrides/Footer.astro",
+    "./overrides/SocialIcons.astro": "./src/overrides/SocialIcons.astro"
   },
   "files": [
     "src"
