--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "./overrides/Hero.astro": "./src/overrides/Hero.astro",
     "./overrides/Footer.astro": "./src/overrides/Footer.astro",
     "./overrides/SocialIcons.astro": "./src/overrides/SocialIcons.astro",
-    "./overrides/Pagination.astro": "./src/overrides/Pagination.astro"
+    "./overrides/Pagination.astro": "./src/overrides/Pagination.astro",
+    "./overrides/Search.astro": "./src/overrides/Search.astro"
   },
   "files": [
     "src"
@@ -57,7 +58,8 @@
   },
   "dependencies": {
     "@fontsource/geist-mono": "^5.1.0",
-    "@fontsource/geist-sans": "^5.1.0"
+    "@fontsource/geist-sans": "^5.1.0",
+    "@pagefind/default-ui": "^1.3.0"
   },
   "devDependencies": {
     "@adrianub/eslint-config": "^0.0.4",
