--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
   "dependencies": {
     "@fontsource/geist-mono": "^5.1.0",
     "@fontsource/geist-sans": "^5.1.0",
-    "@pagefind/default-ui": "^1.3.0"
+    "@pagefind/default-ui": "^1.3.0",
+    "marked": "^15.0.6"
   },
   "devDependencies": {
     "@adrianub/eslint-config": "^0.0.4",
