--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "exports": {
     ".": "./src/index.ts",
     "./styles": "./src/styles.css",
+    "./schema": "./src/schema.ts",
     "./components": "./src/user-components.ts",
     "./overrides/ThemeSelect.astro": "./src/overrides/ThemeSelect.astro",
     "./overrides/PageFrame.astro": "./src/overrides/PageFrame.astro",
