--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "starlight-theme-black",
   "type": "module",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "packageManager": "pnpm@9.14.4",
   "description": "Starlight theme inspired by Shadcn docs",
   "author": "Adrián UB",
@@ -20,7 +20,8 @@
     "shadcn",
     "plugin",
     "documentation",
-    "astro"
+    "astro",
+    "withastro"
   ],
   "sideEffects": false,
   "exports": {
