--- a/docs/package.json
+++ b/docs/package.json
@@ -12,8 +12,11 @@
   },
   "dependencies": {
     "@astrojs/starlight": "^0.34.1",
+    "@astrojs/starlight-tailwind": "^4.0.1",
+    "@tailwindcss/vite": "^4.1.4",
     "astro": "^5.7.5",
     "sharp": "^0.32.5",
-    "starlight-theme-black": "workspace:*"
+    "starlight-theme-black": "workspace:*",
+    "tailwindcss": "^4.1.4"
   }
 }
