--- a/docs/package.json
+++ b/docs/package.json
@@ -18,5 +18,8 @@
     "sharp": "^0.32.5",
     "starlight-theme-black": "workspace:*",
     "tailwindcss": "^4.1.4"
+  },
+  "devDependencies": {
+    "fast-glob": "^3.3.3"
   }
 }
