--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "starlight-theme-black",
+  "name": "starlight-theme-mint",
   "type": "module",
   "version": "0.6.0",
   "packageManager": "pnpm@9.14.4",
-  "description": "Starlight theme inspired by Shadcn docs",
-  "author": "Adrián UB",
+  "description": "Starlight theme inspired by Mintlify",
+  "author": "Nexmoe",
   "license": "MIT",
-  "funding": "https://github.com/sponsors/adrian-ub",
-  "homepage": "https://github.com/adrian-ub/starlight-theme-black#readme",
+  "homepage": "https://github.com/nexmoe/starlight-theme-mint#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/adrian-ub/starlight-theme-black.git"
+    "url": "git+https://github.com/nexmoe/starlight-theme-mint.git"
   },
   "bugs": "https://github.com/adrian-ub/starlight-theme-black/issues",
   "keywords": [
@@ -64,8 +63,6 @@
     "@astrojs/starlight": ">=0.30.0"
   },
   "dependencies": {
-    "@fontsource/geist-mono": "^5.1.0",
-    "@fontsource/geist-sans": "^5.1.0",
     "@pagefind/default-ui": "^1.3.0",
     "marked": "^15.0.6"
   },
