feat: rename theme to Starlight Mint and update documentation
- Rename `starlight-theme-black` to `starlight-theme-mint`
- Update README.md with new theme name and license information
- Modify astro.config.ts to use new

--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "release": "bumpp && npm publish",
     "typecheck": "astro check --minimumSeverity warning --noSync && pnpm --filter docs typecheck",
     "prepare": "simple-git-hooks",
-    "docs": "nr -C docs dev",
+    "docs": "pnpm run -C docs dev",
     "docs:build": "nr -C docs build"
   },
   "peerDependencies": {
@@ -81,6 +81,9 @@
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm i --frozen-lockfile --ignore-scripts --offline && npx lint-staged"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.com/"
   },
   "lint-staged": {
     "*": "eslint --fix"
