--- a/docs/package.json
+++ b/docs/package.json
@@ -16,7 +16,7 @@
     "@tailwindcss/vite": "^4.1.4",
     "astro": "^5.7.5",
     "sharp": "^0.32.5",
-    "starlight-theme-black": "workspace:*",
+    "starlight-theme-mint": "workspace:*",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
